# openclaw-memory-bench

./: .gitignore  ACKNOWLEDGEMENTS.md  PRELIMINARY_RESULTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
REPORTS/: phase-ab-longmemeval50.md
configs/run-profiles/: two-plugin-baseline.json
docs/: FULL_BENCHMARK_PLAN.md  PHASE_A_EXECUTION.md  PROJECT_PLAN_AND_TODOS.md  dataset-format.md  memu-adapter-plan.md  spec-v0.1.md
docs/decisions/: 0001-repo-scope-and-license.md
docs/devlog/: 2026-02-08-part2.md  2026-02-08.md  2026-02-09.md
docs/publication/: openclaw-official-discussion-draft.md  public-release-checklist.md  upstream-insights-2026-02-09.md
examples/: dual_language_mini.json  mini_retrieval.json
scripts/: run_lancedb_vs_openclaw_mem_assisted.py  run_lancedb_vs_openclaw_mem_assisted.sh  run_longmemeval50_qa_compare.py  run_longmemeval50_qa_compare.sh  run_longmemeval50_qa_compare_openclaw.py  run_memory_core_vs_openclaw_mem.py  run_memory_core_vs_openclaw_mem.sh  run_memory_triplet_comprehensive.py  run_memory_triplet_comprehensive.sh  run_phase_ab_longmemeval50.sh  run_phase_ab_longmemeval50_multiseed.sh  run_two_plugin_baseline.py  run_two_plugin_baseline.sh  smoke_phase_ab_compare.sh  summarize_phase_ab_multiseed.py
src/openclaw_memory_bench/: cli.py  converters.py  (+7 more)
tests/: test_converters.py  test_dataset.py  test_manifest.py  test_memory_core_adapter.py  test_memory_lancedb_adapter.py  test_memu_adapter.py  test_metrics.py  test_phase_ab_compare_runner.py  test_phase_ab_runner_wrapper.py  test_runner_and_validation.py  test_smoke.py
(+5 files in other folders)
